# ros2-autonomous-driving-mirte

./: .gitlab-ci.yml  LABGROUP.md  LICENSE  README.md
control_barrel_world/: CMakeLists.txt  package.xml
control_barrel_world/include/control_barrel_world/: control_barrel_world.hpp
control_barrel_world/launch/: solution.launch.xml
control_barrel_world/src/: control_barrel_world.cpp  control_barrel_world_main.cpp
pcl_obstacle_detector/: CMakeLists.txt  package.xml
pcl_obstacle_detector/include/pcl_obstacle_detector/: pcl_obstacle_detector.hpp
pcl_obstacle_detector/src/: pcl_obstacle_detector.cpp  pcl_obstacle_detector_main.cpp
